# xound

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  windows.cmake
src/: demo.cpp  main.cpp
src/audio/: audio.hpp  effects.cpp  effects.hpp  soundboard.cpp  soundboard.hpp
src/ui/: ui.cpp  ui.hpp
